--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,10 +32,14 @@ dependencies = [
 dev = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
+    "pytest-benchmark>=4.0",
     "ruff>=0.3.0",
 ]
 vectors = [
     "sentence-transformers>=2.6.0",
+]
+watcher = [
+    "watchdog>=3.0.0",
 ]
 
 [project.scripts]
